--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,13 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Arial;
   margin: 0;
   padding: 0;
+  margin-bottom: 10rem;
+}
+
+hr {
+  margin-top: 2rem;
+  border-color: rgba(0, 0, 0, 0.116);
 }
 
 nav {
@@ -87,7 +93,7 @@ nav {
 
 #nav-item-search-submit {
   margin-left: 0;
-  background-color: #9c0404;
+  background-color: rgb(185, 6, 6);
   border-style: solid;
   cursor: pointer;
   border: none;
@@ -101,31 +107,30 @@ nav {
 }
 
 #content {
-  padding: 1rem;
-  height: 600px;
+  width: 67%;
+  padding-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #content h1 {
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 1.5rem;
-  width: 80%;
 }
 
 .video-container {
+  margin-top: 1rem;
   display: flex;
   flex-direction: column;
-  height: 300px;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
 }
 
 .channel-info {
   display: flex;
   flex-direction: row;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
 }
+
 .channel-info img {
   width: 3rem;
   height: 3rem;
@@ -137,12 +142,53 @@ nav {
 
 .channel-info h2 {
   cursor: pointer;
-  margin-top: auto;
+  margin-top: 0;
   margin-bottom: auto;
-  margin-left: 0.5rem;
+  margin-left: 1rem;
 }
 
 .video-info {
+  display: flex;
+  flex-direction: row;
   flex: 1;
-  background-color: gray;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.video-info img {
+  height: fit-content;
+  width: 22rem;
+  min-width: 22rem;
+  border-radius: 5%;
+  margin-right: 1rem;
+  overflow: hidden;
+  align-items: center;
+}
+
+.video-description-box {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.video-description-box-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 0.1rem;
+  margin-bottom: 0.1rem;
+}
+
+.video-description-box-views-date {
+  margin-top: 0;
+  color: rgba(0, 0, 0, 0.541);
+  font-size: 0.7rem;
+  font-weight: bold;
+  /* margin-bottom: 2rem; */
+}
+
+.video-description-box-description {
+  margin-top: 0;
+  font-size: 0.9rem;
+  height: fit-content;
+  color: rgba(0, 0, 0, 0.644);
+  /* background: gray; */
 }
