--- a/views/auth/auth.ejs
+++ b/views/auth/auth.ejs
@@ -10,17 +10,20 @@
   <body>
     <%- include('../includes/navigation.ejs') %>
     <div id="content">
-      <h1><%=PageHeader%></h1>
+      <h1><%=pageHeader %></h1>
       <hr />
-      <% if(PageHeader === "Register"){ %> 
-      <%- include('../forms/register.ejs') %> 
-      <% }else if(PageHeader === "Login"){%> 
-        <%-include('../forms/login.ejs') %> 
-    <% }else if(PageHeader === "Reset Password"){%> 
-        <%-include('../forms/reset-password.ejs') %> 
-    <% }  else if(PageHeader === "Create a new password"){%> 
-        <%-include('../forms/reset-password-token.ejs') %> 
-    <% } %>
+      <% if(pageHeader === "Register"){ %> <%- include('../forms/register.ejs')
+      %> <% }else if(pageHeader === "Login"){%> <%-include('../forms/login.ejs')
+      %> <% }else if(pageHeader === "Reset Password"){%>
+      <%-include('../forms/reset-password.ejs') %> <% } else if(PageHeader ===
+      "Create a new password"){%>
+      <%-include('../forms/reset-password-token.ejs') %> <% } %>
     </div>
+    <div id="toastBox"></div>
+    <script src="/public/js/message.js"></script>
+    
+    <script>
+      showMessages(<%-errorMessages%> , <%-successMessages%> );
+    </script>
   </body>
 </html>
