--- a/views/auth/auth.ejs
+++ b/views/auth/auth.ejs
@@ -15,7 +15,7 @@
       <% if(pageHeader === "Register"){ %> <%- include('../forms/register.ejs')
       %> <% }else if(pageHeader === "Login"){%> <%-include('../forms/login.ejs')
       %> <% }else if(pageHeader === "Reset Password"){%>
-      <%-include('../forms/reset-password.ejs') %> <% } else if(PageHeader ===
+      <%-include('../forms/reset-password.ejs') %> <% } else if(pageHeader ===
       "Create a new password"){%>
       <%-include('../forms/reset-password-token.ejs') %> <% } %>
     </div>
