--- a/views/forms/register.ejs
+++ b/views/forms/register.ejs
@@ -23,7 +23,7 @@
       required
     />
 
-    <label for="confirm-password" class="label_">Confirm Password</label>
+    <label for="confirmPassword" class="label_">Confirm Password</label>
     <input
       type="password"
       id="confirmPassword"
