--- a/views/forms/reset-password-token.ejs
+++ b/views/forms/reset-password-token.ejs
@@ -1,13 +1,15 @@
- <div class="container_">
-        <form class="form_">
+ <div class="container_" >
+        <form class="form_" action="/auth/reset-password-token" method="POST">
 
-            <!-- do not forget to add a hidden input for the token -->
+            <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+            <input type="hidden" name = "token" value="<%= token %>">
 
             <label for="password" class="label_">Password</label>
             <input type="password" id="password" name="password" class="input_" required>
 
-            <label for="confirm-password" class="label_">Confirm Password</label>
-            <input type="password" id="confirm-password" name="confirm-password" class="input_" required>
+            <label for="confirmPassword" class="label_">Confirm Password</label>
+            <input type="password" id="confirm-password" name="confirmPassword" class="input_" required>
+
 
             <button type="submit" class="button_">Reset Password</button>
         </form>
