--- a/views/forms/reset-password.ejs
+++ b/views/forms/reset-password.ejs
@@ -1,8 +1,8 @@
  <div class="container_">
-        <form class="form_">
-
+        <form class="form_" action = "/auth/reset-password" method = "POST">
             <label for="email" class="label_">Email</label>
             <input type="email" id="email" name="email" class="input_" required>
+            <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
             <button type="submit" class="button_">confirm email</button>
         </form>
     </div>
