--- a/views/forms/login.ejs
+++ b/views/forms/login.ejs
@@ -1,5 +1,6 @@
  <div class="container_">
-        <form class="form_">
+        <form class="form_" action="/auth/login" method="POST" >
+            <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
 
             <label for="email" class="label_">Email</label>
             <input type="email" id="email" name="email" class="input_" required>
