--- a/views/forms/login.ejs
+++ b/views/forms/login.ejs
@@ -8,7 +8,7 @@
             <label for="password" class="label_">Password</label>
             <input type="password" id="password" name="password" class="input_" required>
             <p>
-                <a style="color: rgba(0, 0, 5, 0.856) ;" href="\auth\reset-password">reset password</a>
+                <a style="color: rgba(0, 0, 5, 0.856) ;" href="/auth/reset-password">reset password</a>
             </p>
             <button type="submit" class="button_">Login</button>
         </form>
