--- a/views/forms/register.ejs
+++ b/views/forms/register.ejs
@@ -9,7 +9,7 @@
     <input type="text" id="name" name="channelName" class="input_" required />
 
     <label for="handel" class="label_">Handel</label>
-    <input type="text" id="handle" name="handel" class="input_" required />
+    <input type="text" id="handle" name="handle" class="input_" required />
 
     <label for="email" class="label_">Email</label>
     <input type="email" id="email" name="email" class="input_" required />
