--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,10 +16,10 @@ nav {
 
 .navbar {
   height: 3.5rem;
-  list-style-type: none;
   padding: 0;
   margin: 0;
   display: flex;
+  flex-direction: row;
 }
 
 .nav-item-right {
@@ -76,6 +76,21 @@ nav {
   font-size: 1.2rem;
   color: rgba(255, 255, 255, 0.596);
   text-decoration: none;
+}
+
+.nav-item form input {
+  border: none;
+  box-shadow: none;
+  font-size: 1.2rem;
+  background-color: transparent;
+  color: white;
+  bottom: none;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.nav-item form input:hover {
+  color: rgba(255, 255, 255, 0.596);
 }
 
 .nav-item a:hover {
