--- a/views/forms/register.ejs
+++ b/views/forms/register.ejs
@@ -33,7 +33,7 @@
     />
 
     <label for="channelPicture" class="label_">Channel Picture</label>
-    <input type="file" id="channel-picture" name="channelPicture" required />
+    <input type="file" id="channelPicture" name="channelPicture" required />
 
     <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
     <button type="submit" class="button_">Register</button>
