create and edit video

--- a/views/creator/creator.ejs
+++ b/views/creator/creator.ejs
@@ -12,7 +12,7 @@
     <div id="content">
       <h1><%=pageHeader %></h1>
       <hr />
-      <%- include('../forms/upload-video.ejs')  %>
+      <%- include('../forms/upload-edit-video.ejs')  %>
     </div>
     <div id="toastBox"></div>
     <script src="/public/js/message.js"></script>
