--- a/views/feed/channel.ejs
+++ b/views/feed/channel.ejs
@@ -47,5 +47,10 @@
       <hr />
       <!-- video start -->
     </div>
+    
+    <script src="/public/js/message.js"></script>    
+    <script>
+      showMessages(<%-errorMessages%> , <%-successMessages%> );
+    </script>
   </body>
 </html>
