--- a/views/feed/home.ejs
+++ b/views/feed/home.ejs
@@ -13,28 +13,9 @@
       <hr />
       
       <!-- video start -->
-      <%- include('../includes/video-item.ejs') %>
-      <hr />
-      <!-- video start -->
+      <!-- <hr /> -->
+      <!-- video end -->
 
-      
-      <!-- video start -->
-      <%- include('../includes/video-item.ejs') %>
-      <hr />
-      <!-- video start -->
-
-
-      
-      <!-- video start -->
-      <%- include('../includes/video-item.ejs') %>
-      <hr />
-      <!-- video start -->
-       
-      <!-- video start -->
-      <%- include('../includes/video-item.ejs') %>
-      <hr />
-      <!-- video start -->
-    </div>
     
     <script src="/public/js/message.js"></script>    
     <script>
