--- a/views/feed/video.ejs
+++ b/views/feed/video.ejs
@@ -12,17 +12,24 @@
     <div id="content">
       <div id="video-player-container">
         <div class="channel-info">
-          <img src="<%=channelPictureURL%>" alt="channel image" />
-          <h2><%=channelName%></h2>
+          <a href="<%=channelUrl%>">
+            <img src="<%=channelPictureURL%>" alt="channel image" />
+          </a>
+          <a style="color: black; text-decoration: none;" href="<%=channelUrl%>">
+            <h2><%=channelName%></h2>
+          </a>
         </div>
 
         <video controls >
           <source src="<%=videoUrl%>" type="video/mp4" />
         </video>
         <div id="title-like-box">
-          <h2><%=description%></h2>
+          <h2><%=title%></h2>
           <p class="video-description-box-views-date">
             <%=createdAt%> • <%=likesCounter%> likes • <%=commentsCounter%> comments
+          </p>
+          <p>
+            <%=description%>
           </p>
           <button class="like-button">Like</button>
         </div>
