--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -17,8 +17,8 @@
       
     </div>
     <div class="nav-search">
-      <form action="" class="nav-item-search">
-        <input type="text" placeholder="Search" id="nav-item-search-input" />
+      <form action="\search" class="nav-item-search">
+        <input name = "query" type="text" placeholder="Search" id="nav-item-search-input" />
         <input type="submit" value="search" id="nav-item-search-submit" />
       </form>
     </div>
