--- a/views/feed/video.ejs
+++ b/views/feed/video.ejs
@@ -64,7 +64,9 @@
     <script src="/public/js/utils.js"></script>
     <script>
       showMessages(<%-errorMessages%> , <%-successMessages%> );
-      setLikeButton(<%=isLiked%>);
+      <%if(isLoggedIn){%>
+        setLikeButton(<%=isLiked%>);
+      <%}%>  
     </script>
   </body>
 </html>
