--- a/public/css/video.css
+++ b/public/css/video.css
@@ -88,7 +88,7 @@
   margin-top: 1rem;
   display: flex;
   flex-direction: row;
-  min-height: 8rem;
+  min-height: 4rem;
 }
 .comment-item img {
   width: 3rem;
@@ -113,6 +113,6 @@
 }
 
 .comment-content {
-  margin-top: 0;
+  margin-top: 1.2rem;
   font-weight: lighter;
 }
